--- a/src/views/components/Checkbox/Checkbox.scss
+++ b/src/views/components/Checkbox/Checkbox.scss
@@ -5,10 +5,13 @@
   width: max-content;
   align-items: center;
   gap: 12px;
+  position: relative;
+  overflow: hidden;
   cursor: pointer;
 
   &__real {
-    display: none;
+    position: absolute;
+    left: -100%;
   }
 
   &__real:checked ~ &__custom {
